loyalty-card section

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,3 +4,6 @@
 @import url(inputs.css);
 @import url(hero.css);
 @import url(profile.css);
+@import url(loyalty.css);
+@import url(rewards.css);
+@import url(history.css);
