--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -22,6 +22,23 @@
   font: var(--text-xs);
 }
 
+.block {
+  display: block;
+}
+.flex {
+  display: flex;
+}
+.space-between {
+  justify-content: space-between;
+}
+
+.gray-500 {
+  color: var(--gray-500)
+}
+.gray-600 {
+  color: var(--gray-600)
+}
+
 .content {
   display: grid;
   flex-direction: column;
@@ -59,7 +76,6 @@
 }
 #loyalty {
   grid-area: loyalty;
-  background-color: darkslategray;
 }
 
 #rewards {
