--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,7 +1,7 @@
 .btn-enter::after {
   content: '';
   width: 1.25rem;
-  height: 1.25rem;
+  aspect-ratio: 1/1;
   background-image: url(/src/assets/icons/arrow-elbow-down-left.svg);
   background-repeat: no-repeat;
   background-size: cover;
