--- a/src/styles/loyalty.css
+++ b/src/styles/loyalty.css
@@ -1,6 +1,7 @@
 #loyalty {
   padding: 1.5rem 1.25rem 1.25rem;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1.25rem;
 }
 
@@ -13,6 +14,11 @@
   padding: .21875rem .5rem;
   white-space: nowrap;
   margin-bottom: auto;
+  margin-left: 1rem;
+}
+
+#loyalty .subtitle {
+  margin-top: .25rem;
 }
 
 .loyalty-checks {
@@ -31,41 +37,53 @@
   align-items: center;
   justify-content: center;
 }
+
 .loyalty-checks div::after {
   content: '';
   aspect-ratio: 1/1;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .loyalty-checks .check-card.checked::after {
   width: 2.5rem;
   background-image: url(/src/assets/icons/checked.png);
 }
 
-.loyalty-checks .check-card.gift::after{
+.loyalty-checks .check-card.gift::after {
   width: 1.5rem;
   background-image: url(/src/assets/icons/gift-solid.svg);
 }
+
 .loyalty-checks .check-card.checked.gift::after,
-.loyalty-checks .check-card.gift.checked::after{
+.loyalty-checks .check-card.gift.checked::after {
   width: 1.5rem;
   background-image: url(/src/assets/icons/pingift.svg);
 }
 
-@media (width >= 80em) {
+@media (width >=80em) {
   .loyalty-checks .check-card {
     height: 5.5rem;
     border-radius: 1.25rem;
   }
+
+  #loyalty {
+    padding: 2rem;
+    gap: 2rem;
+  }
+
   #loyalty .subtitle {
     font: var(--text-sm);
   }
+
   #loyalty .id {
     font: var(--subtitle-md);
   }
+
   .loyalty-checks .check-card.checked::after {
     width: 4rem;
   }
+
   .loyalty-checks .check-card.checked.gift::after,
   .loyalty-checks .check-card.gift.checked::after,
   .loyalty-checks .check-card.gift::after {
