--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -10,7 +10,7 @@
 }
 
 .text-input {
-    padding: .5rem 3.75rem .5rem .5rem;
+    padding: .5rem 3.75rem .5rem var(--gap-sm);
     border-radius: .75rem;
     border: 1px solid var(--gray-400);
     background-color: var(--gray-300);
