--- a/src/styles/history.css
+++ b/src/styles/history.css
@@ -11,7 +11,7 @@
 
 .history-logs {
   position: relative;
-  max-height: 22.5rem;
+  height: 22.5rem;
   padding-top: .75rem;
   border-top: 1px solid var(--gray-200);
   display: flex;
